--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -3,6 +3,26 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="MainWindow" Height="350" Width="525">
   <Grid>
+    <Grid.ColumnDefinitions>
+      <ColumnDefinition Width="*"/>
+      <ColumnDefinition Width="*"/>
+    </Grid.ColumnDefinitions>
+    <Grid.RowDefinitions>
+      <RowDefinition Height="Auto"/>
+      <RowDefinition Height="*"/>
+    </Grid.RowDefinitions>
+    
+    <TextBlock Text="Master" Grid.Column="0" Grid.Row="0"/>
+    <StackPanel Grid.Column="0" Grid.Row="1">
+      <ListView></ListView>
+    </StackPanel>
 
+    <TextBlock Text="Detail" Grid.Column="1" Grid.Row="0"/>
+    <StackPanel Grid.Column="1" Grid.Row="1">
+      <TextBlock Text="Detail Name"/>
+      <TextBlock Text="Detail Legs"/>
+      <TextBlock Text="Detail Useful"/>
+    </StackPanel>
+  
   </Grid>
 </Window>
