--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -1,6 +1,11 @@
 ﻿<Window x:Class="WPF.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+        mc:Ignorable="d"
+        xmlns:designTime="clr-namespace:ViewModel.DesignTime;assembly=ViewModel"
+        d:DataContext="{d:DesignInstance designTime:MainWindowDesignTime, IsDesignTimeCreatable=True}"
         Title="MainWindow" Height="350" Width="525">
   <Grid>
     <Grid.ColumnDefinitions>
@@ -19,9 +24,9 @@
 
     <TextBlock Text="Detail" Grid.Column="1" Grid.Row="0"/>
     <StackPanel Grid.Column="1" Grid.Row="1">
-      <TextBlock Text="Detail Name"/>
-      <TextBlock Text="Detail Legs"/>
-      <TextBlock Text="Detail Useful"/>
+      <TextBlock Text="{Binding Name}"/>
+      <TextBlock Text="{Binding Legs}"/>
+      <TextBlock Text="{Binding Useful}"/>
     </StackPanel>
   
   </Grid>
