added a display style for HorseViewModel

--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -7,6 +7,9 @@
         xmlns:designTime="clr-namespace:ViewModel.DesignTime;assembly=ViewModel"
         d:DataContext="{d:DesignInstance designTime:MainWindowDesignTime, IsDesignTimeCreatable=True}"
         Title="MainWindow" Height="350" Width="525">
+  <Window.Resources>
+    <ResourceDictionary Source="Resources/MainWindowResources.xaml"/>
+  </Window.Resources>
   <Grid>
     <Grid.ColumnDefinitions>
       <ColumnDefinition Width="*"/>
