--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -28,6 +28,7 @@
 
     <!-- If there's no selected horse, then detail shoudln't appear -->
     <TextBlock Text="Detail" Grid.Column="1" Grid.Row="0"/>
+    <TextBlock Grid.Column="1" Grid.Row="1" Text="Nothing is selected." Visibility="{Binding SelectedHorse, Converter={converter:NotNullToVisible}, ConverterParameter=Inverted}"/>
     <StackPanel Grid.Column="1" Grid.Row="1" Visibility="{Binding SelectedHorse, Converter={converter:NotNullToVisible}}">
       <TextBlock Text="{Binding SelectedHorse.Name}"/>
       <TextBlock Text="{Binding SelectedHorse.Legs}"/>
