--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -26,7 +26,7 @@
       <ListView ItemsSource="{Binding Horses}" SelectedItem="{Binding SelectedHorse}"/>
     </StackPanel>
 
-    <!-- If there's no selected horse, then detail shoudln't appear -->
+    <!-- If there's no selected horse, then detail shouldn't appear -->
     <TextBlock Text="Detail" Grid.Column="1" Grid.Row="0"/>
     <TextBlock Grid.Column="1" Grid.Row="1" Text="Nothing is selected." Visibility="{Binding SelectedHorse, Converter={converter:NotNullToVisible}, ConverterParameter=Inverted}"/>
     <StackPanel Grid.Column="1" Grid.Row="1" Visibility="{Binding SelectedHorse, Converter={converter:NotNullToVisible}}">
