Added RelayCommand and used it in the View to clear the selection from the ListView. It does this by setting the SelectedHorse to Null in the ViewModel. This also demonstrates the other behavior of RelayCommand, CanExecute, which will enable/disable the control it is bound to based on a bool. In this case, the button is enabled when the SelectedHorse is not null, which makes sense when you're trying to make it null.

--- a/WPF/MainWindow.xaml
+++ b/WPF/MainWindow.xaml
@@ -24,6 +24,7 @@
     <TextBlock Text="Master" Grid.Column="0" Grid.Row="0"/>
     <StackPanel Grid.Column="0" Grid.Row="1">
       <ListView ItemsSource="{Binding Horses}" SelectedItem="{Binding SelectedHorse}"/>
+      <Button Content="Clear Selection" Command="{Binding ClearSelectionCommand}"/>
     </StackPanel>
 
     <!-- If there's no selected horse, then detail shouldn't appear -->
