--- a/WPF/Resources/MainWindowResources.xaml
+++ b/WPF/Resources/MainWindowResources.xaml
@@ -2,7 +2,17 @@
 <ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:vm="clr-namespace:ViewModel;assembly=ViewModel">
+  
+  <Style TargetType="TextBlock" x:Key="ListItem">
+    <Setter Property="FontStyle" Value="Italic"/>
+  </Style>
+
+  <Style TargetType="TextBlock" x:Key="Header">
+    <Setter Property="FontWeight" Value="Bold"/>
+  </Style>
+
   <DataTemplate DataType="{x:Type vm:HorseViewModel}">
-    <TextBlock Text="{Binding Name}"/>
+    <TextBlock Text="{Binding Name}" Style="{StaticResource ListItem}"/>
   </DataTemplate>
+  
 </ResourceDictionary>
